2007-01-06  Scott James Remnant  <scott@netsplit.com>

	* ca.po, fr.po, sv.po: Update line numbers.

	* POTFILES.in: Add nih/command.c, remove upstart/control.c and
	replace with upstart/message.c and upstart/wire.c

2006-12-14  Scott James Remnant  <scott@netsplit.com>

	* LINGUAS: Include the en@quot and en@boldquot translation files
	as suggested by the manual, these seem to be generated correctly.

	* ca.po, fr.po, sv.po: Download translations from Rosetta.
	* LINGUAS: Update to include new languages.

2006-10-17  Scott James Remnant  <scott@netsplit.com>

	* POTFILES.in: Update initctl sources.

2006-09-27  Scott James Remnant  <scott@netsplit.com>

	* POTFILES.in: Update with everything moving around

2006-08-31  Scott James Remnant  <scott@netsplit.com>

	* POTFILES.in: Add new sources from util and compat/sysv directories.

2006-08-24  Scott James Remnant  <scott@netsplit.com>

	* POTFILES.in: Add nih/file.c and nih/option.c,
	add init/cfgfile.c	

2006-08-19  Scott James Remnant  <scott@netsplit.com>

	* POTFILES.in: add util/initctl.c

2006-08-18  Scott James Remnant  <scott@netsplit.com>

	* POTFILES.in: nih/errors.h and upstart/errors.h have strings
	marked for translation.

	* POTFILES.in: Add the list of current source files.

2006-07-13  Scott James Remnant  <scott@netsplit.com>

	* Makevars (COPYRIGHT_HOLDER): Change to Canonical Ltd.
	(MSGID_BUGS_ADDRESS): Change to Launchpad.

2006-05-14  Scott James Remnant  <scott@netsplit.com>

	* LINGUAS: Created file to hold language list once we have some
	translations.
	* POTFILES.in: Created file to hold list of source files which
	contain translations.
	* Makevars: Created file from Makevars.template and filled in fields.
	* ChangeLog: Initial gettext infrastructure from gettext 0.14.5.